--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.14",
+    "classnames": "^2.5.1",
     "next": "14.1.4",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
